Make method for rendering a big tooltip