@@ -395,8 +395,8 @@ public class TooltipHandler {
                 } else if (tooltipY + tooltipHeight + 4 > screenHeight) {
                     tooltipY = screenHeight - tooltipHeight - 4;
                 }
-                graphics.pose().translate(0,0,399);
-                graphics.renderTooltip(minecraft.font, properties.stream().map(mutableComponent -> Component.literal(mutableComponent.getString())).collect(Collectors.toList()), targetStack.getTooltipImage(), targetStack, tooltipX, tooltipY);
+
+                ClientMethods.drawTooltipLines(graphics,properties.stream().map(mutableComponent -> Component.literal(mutableComponent.getString())).toList(),tooltipX,tooltipY);
             }
         }
     }
